force-app/main/default/objects/PHSS_TriggerSettings__c/fields/ContactTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>ContactTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Contact Trigger is disabled.</description>
    <inlineHelpText>When checked, the ContactTrigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
    <label>Contact Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>