force-app/main/default/objects/PHSS_TriggerSettings__c/fields/ShareBudgetWithPartnerDisabled__c.field-meta.xml
<CustomField>
    <fullName>ShareBudgetWithPartnerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the shareBudgetWithPartner trigger is disabled. NOTE: Only methods using checkbox will be disabled.</description>
    <inlineHelpText>When checked, the shareBudgetWithPartner trigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
    <label>ShareBudgetWithPartner Disabled</label>
    <type>Checkbox</type>
</CustomField>