force-app/main/default/objects/PHSS_TriggerSettings__c/fields/skedJobTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>skedJobTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the skedJobTrigger is disabled. NOTE: Only methods using checkbox will be disabled.</description>
    <inlineHelpText>When checked, the skedJobTrigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
    <label>skedJobTrigger Disabled</label>
    <type>Checkbox</type>
</CustomField>