force-app/main/default/objects/PHSS_TriggerSettings__c/fields/updateBudgetFundClaimDisabled__c.field-meta.xml
<CustomField>
    <fullName>updateBudgetFundClaimDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the updateBudget_FundClaim trigger is disabled. NOTE: Only methods using checkbox will be disabled.</description>
    <inlineHelpText>When checked, the updateBudget_FundClaim Trigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
    <label>updateBudget_FundClaim Disabled</label>
    <type>Checkbox</type>
</CustomField>