force-app/main/default/objects/PHSS_TriggerSettings__c/fields/updateBudgetFundRequestDisabled__c.field-meta.xml
<CustomField>
    <fullName>updateBudgetFundRequestDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, theupdateBudget_FundRequest Trigger is disabled. NOTE: Only methods using checkbox will be disabled.</description>
    <inlineHelpText>When checked, the updateBudget_FundRequest Trigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
    <label>updateBudget_FundRequest Disabled</label>
    <type>Checkbox</type>
</CustomField>