force-app/main/default/objects/PHSS_TriggerSettings__c/fields/UpdateFundClaimChannelManagerDisabled__c.field-meta.xml
<CustomField>
    <fullName>UpdateFundClaimChannelManagerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the UpdateFundClaimChannelManager Trigger is disabled. NOTE: Only methods using checkbox will be disabled.</description>
    <inlineHelpText>When checked, the UpdateFundClaimChannelManager Trigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
    <label>UpdateFundClaimChannelManager Disabled</label>
    <type>Checkbox</type>
</CustomField>