force-app/main/default/objects/PHSS_TriggerSettings__c/fields/UserCertificationTrigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>UserCertificationTrigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the UserCertificationTrigger is disabled.</description>
    <inlineHelpText>When checked, the UserCertificationTrigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
    <label>UserCertificationTrigger Disabled</label>
    <type>Checkbox</type>
</CustomField>